 *  [ES] line style selectors have dash bitmaps displayed
 !  [ES] (approximate) number of tick divisions for autoticking is set in
         "Axis properties" now instead of "Autoscale"
 *  [ES] fixed rounding errors in clipping routines (in particular, rep. #476
         and #504)
 *  [ES] #241
 *  [ES] #470
 *  [JH] VMS updates
 *  [ES] #491
 !  [ES] new graph selectors
 *  [HS] #464
 *  [AM] OS/2 updates
 *  [ES] XY chart is back
 *  [ES] #341, #410
 !  [ES] new chart set presentations: stacked line and scatter
 !  [ES] #198
 !  [ES] new options for charts (...)
 !  [ES] bar charts with error bars
 !  [ES] legends can be displayed in reverse order (#205)
 *  [EV] a feature extraction bug fixed
 *  [EV] first release of Tutorials
 *  [ES] #503
 !  [ES] device commands (#490)
 *  [ES] #204, #427
 *  [ES] view/world coords in string edit (#469)
 *  [LM] input data line length restriction removed (#260, #357, #443)
 !  [ES] no X timers
 *  [ES] max error count upon reading in reduced from 50 to 5
 !  [ES] VXMAX, VYMAX
 *  [AM] -version additions
 *  [ES] #274
 *  [ES] npipe "buffer overflow" fixed
 *  [ES] npipe load bug fixed
 !  [ES] remove -symcolorbug
 *  [ES] enhanced backward compatibility with Xmgr
 *  [ES] #385, #441
 !  [ES] fonttool
 *  [LM] linear regression on a two-point set was performed wrongly

 _Legend:_

    [EV]  - Ed Vigmond <vigmonde@IGB.UMontreal.CA>
    [RN]  - Rolf Niepraschk <niepraschk@ChbRB.berlin.ptb.de>
    [HS]  - Henrik Seidel <seidel@mpimg-berlin-dahlem.mpg.de>
    [JH]  - John Hasstedt <John.Hasstedt@sunysb.edu>
    [AM]  - Alexander Mai <st002279@hrzpub.tu-darmstadt.de>
    [CM]  - Charles Myers <myers@oicinc.com>
    [MM]  - Marcus H. Mendenhall <marcus.h.mendenhall@vanderbilt.edu>
    [HS2] - Heiko R. Selber <selber@fhi-berlin.mpg.de>
    [LM]  - Luc Maisonobe <Luc.Maisonobe@cnes.fr>
    [ES]  - Evgeny Stambulchik <fnevgeny@plasma-gate.weizmann.ac.il>

    "!" means no documentation provided (yet)