@@ -1651,9 +1651,9 @@ Set the current graph's viewport (where on the device the graph is displayed).
 <HR>
 	<h2> <a NAME="trans">Transformations</a> </h2>
 <p>
-	<li> LOAD VAR setnum, expr, expr
+	<li> LOAD VAR number, expr, expr
 <p>
- Load a set sequentially
+ Load a scratch array VAR with linear mesh
 <p>
 	<li> REGRESS (setnum, number)
 <p>
